lib_LTLIBRARIES = libclampi.la
libclampi_la_SOURCES = clampi.c clampi_adaptive.c clampi_get.c clampi_invalidate.c clampi_win.c clampi_win_flush.c clampi_win_free.c utils.c AVL/AvlTree.c clampi_internal.h ht.h utils.h AVL/AvlTree.h
libclampi_la_LDFLAGS = -verision-info 0:0:0
include_HEADERS = clampi.h mpi_wrapper.h

